# xnat-tools

./: README.md  batch_process.py  example.json  get_metadata.py  list_metadata.py  pyproject.toml  requirements.txt  setup.py  utilities.py
src/xnat_tools/: batch_process.py  get_metadata.py  utilities.py
xnat_tools/: batch_process.py  get_metadata.py  utilities.py
